I changed the title and added more contestants to the voting app

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Voting App</title>
+    <title>ELSA Award Night</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -62,6 +62,10 @@
                 <p>Nwobodo Daniel</p>
                 <button onclick="vote('Nwobodo Daniel', 'Best Dressed Elsalite')">Vote</button>
             </div>
+            <div class="contestant">
+                <p>Gonibo Alex Olivian</p>
+                <button onclick="vote('Gonibo Alex Olivian', 'Best Dressed Elsalite')">Vote</button>
+            </div>
         </section>
 
         <section class="category">
@@ -78,6 +82,10 @@
                 <p>Tailoredby_Veekee</p>
                 <button onclick="vote('Tailoredby_Veekee', 'Brand Of The Year')">Vote</button>
             </div>
+            <div class="contestant">
+                <p>Cisca Photography</p>
+                <button onclick="vote('Cisca Photography', 'Brand Of The Year')">Vote</button>
+            </div>
         </section>
 
         <section class="category">
@@ -93,6 +101,18 @@
             <div class="contestant">
                 <p>Nwobodo Daniel</p>
                 <button onclick="vote('Nwobodo Daniel', 'Chef Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Comr. Daniel Stephen Nwobodo</p>
+                <button onclick="vote('Comr. Daniel Stephen Nwobodo', 'Chef Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Cherry</p>
+                <button onclick="vote('Cherry', 'Chef Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Erim Joy</p>
+                <button onclick="vote('Erim Joy', 'Chef Of The Year')">Vote</button>
             </div>
         </section>
 
@@ -159,6 +179,10 @@
                 <p>Grace Abang</p>
                 <button onclick="vote('Grace Abang', 'Fashion Designer Of The Year')">Vote</button>
             </div>
+            <div class="contestant">
+                <p>Tailoredby Veekee</p>
+                <button onclick="vote('Tailoredby Veekee', 'Fashion Designer Of The Year')">Vote</button>
+            </div>
         </section>
 
         <section class="category">
@@ -186,6 +210,11 @@
             <div class="contestant">
                 <p>Nwobodo Daniel</p>
                 <button onclick="vote('Nwobodo Daniel', 'Humanitarian Personality Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Sen. Blessing Enang Enyim</p>
+                <button
+                    onclick="vote('Sen. Blessing Enang Enyim', 'Humanitarian Personality Of The Year')">Vote</button>
             </div>
         </section>
 
@@ -243,6 +272,10 @@
                 <p>Chibuzor Ifeoma Onyinyechi</p>
                 <button onclick="vote('Eke Stephanie', 'Most Beautiful Elsalite')">Vote</button>
             </div>
+            <div class="contestant">
+                <p>Akrah Jemimah</p>
+                <button onclick="vote('Akrah Jemimah', 'Most Beautiful Elsalite')">Vote</button>
+            </div>
         </section>
 
         <section class="category">
@@ -259,6 +292,19 @@
                 <p>Queen Ugly</p>
                 <button onclick="vote('Queen Ugly', 'Most Charismatic Elsalite')">Vote</button>
             </div>
+            <div class="contestant">
+                <p>Sen. Blessing Enang Enyim</p>
+                <button
+                    onclick="vote('Sen. Blessing Enang Enyim', 'Most Charismatic Personality Of The Year')">Vote</button>
+            </div>
+        </section>
+
+        <section class="category">
+            <h3>Most Classy Elsalite</h3>
+            <div class="contestant">
+                <p>Comr. Emmanuella Kejie</p>
+                <button onclick="vote('Comr. Emmanuella Kejie', 'Most Classy Elsalite')">Vote</button>
+            </div>
         </section>
 
         <section class="category">
@@ -266,6 +312,14 @@
             <div class="contestant">
                 <p>Ugoh Promise</p>
                 <button onclick="vote('Ugoh Promise', 'Most Composed Elsalite')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Comr. Divine Ernest Ideba</p>
+                <button onclick="vote('Comr. Divine Ernest Ideba', 'Most Composed ELSALITE Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Emmanuel Deborah Emmanuel</p>
+                <button onclick="vote('Emmanuel Deborah Emmanuel', 'Most Composed ELSALITE Of The Year')">Vote</button>
             </div>
         </section>
 
@@ -282,6 +336,10 @@
             <div class="contestant">
                 <p>Grace Abang</p>
                 <button onclick="vote('Grace Abang', 'Most Eloquent Elsalite')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Obed Fortunate Joy</p>
+                <button onclick="vote('Obed Fortunate Joy', 'Most Eloquent Elsalite')">Vote</button>
             </div>
         </section>
 
@@ -428,107 +486,121 @@
                 <p>Ita Uduak Aniedi</p>
                 <button onclick="vote('Ita Uduak Aniedi', 'Most Reserved Elsalite')">Vote</button>
             </div>
+            <div class="contestant">
+                <p>Comr. Abasiama Monday Okon</p>
+                <button
+                    onclick="vote('Comr. Abasiama Monday Okon', 'Most Reserved ELSALITE Of The Year (Female)')">Vote</button>
+            </div>
+        </section>
 
 
-            <section class="category">
-                <h3>Philanthropist Of The Year</h3>
-                <div class="contestant">
-                    <p>Amarachi Marvellous Elizabeth</p>
-                    <button onclick="vote('Amarachi Marvellous Elizabeth', 'Philanthropist Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Nwobodo Daniel</p>
-                    <button onclick="vote('Nwobodo Daniel', 'Philanthropist Of The Year')">Vote</button>
-                </div>
-            </section>
+        <section class="category">
+            <h3>Philanthropist Of The Year</h3>
+            <div class="contestant">
+                <p>Amarachi Marvellous Elizabeth</p>
+                <button onclick="vote('Amarachi Marvellous Elizabeth', 'Philanthropist Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Nwobodo Daniel</p>
+                <button onclick="vote('Nwobodo Daniel', 'Philanthropist Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Comr. Daniel Stephen Nwobodo</p>
+                <button onclick="vote('Comr. Daniel Stephen Nwobodo', 'Philanthropist Of The Year')">Vote</button>
+            </div>
+        </section>
 
-            <section class="category">
-                <h3>Photographer Of The Year</h3>
-                <div class="contestant">
-                    <p>God'sfavour ITA</p>
-                    <button onclick="vote('God`sfavour ITA', 'Photographer Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Atiang Benedict</p>
-                    <button onclick="vote('Atiang Benedict', 'Photographer Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Cisca Photography</p>
-                    <button onclick="vote('Cisca Photography', 'Photographer Of The Year')">Vote</button>
-                </div>
-            </section>
+        <section class="category">
+            <h3>Photographer Of The Year</h3>
+            <div class="contestant">
+                <p>God'sfavour ITA</p>
+                <button onclick="vote('God`sfavour ITA', 'Photographer Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Atiang Benedict</p>
+                <button onclick="vote('Atiang Benedict', 'Photographer Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Cisca Photography</p>
+                <button onclick="vote('Cisca Photography', 'Photographer Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Comr. Benedict Bekwus Atiang</p>
+                <button onclick="vote('Comr. Benedict Bekwus Atiang', 'Photographer Of The Year')">Vote</button>
+            </div>
+        </section>
 
-            <section class="category">
-                <h3>Rookie Of The Year</h3>
-                <div class="contestant">
-                    <p>Ugorji Glory Uzunma</p>
-                    <button onclick="vote('Ugorji Glory Uzunma', 'Rookie Of The Year')">Vote</button>
-                </div>
-            </section>
+        <section class="category">
+            <h3>Rookie Of The Year</h3>
+            <div class="contestant">
+                <p>Ugorji Glory Uzunma</p>
+                <button onclick="vote('Ugorji Glory Uzunma', 'Rookie Of The Year')">Vote</button>
+            </div>
+        </section>
 
-            <section class="category">
-                <h3> Senator Of The Year</h3>
-                <div class="contestant">
-                    <p>Sen. Blessing Enyim</p>
-                    <button onclick="vote('Sen. Blessing Enyim', 'Senator Of The Year')">Vote</button>
-                </div>
+        <section class="category">
+            <h3> Senator Of The Year</h3>
+            <div class="contestant">
+                <p>Sen. Blessing Enyim</p>
+                <button onclick="vote('Sen. Blessing Enyim', 'Senator Of The Year')">Vote</button>
+            </div>
 
-            </section>
+        </section>
 
-            <section class="category">
-                <h3>Sportsman Of The Year</h3>
-                <div class="contestant">
-                    <p>Divine Ernest ideba</p>
-                    <button onclick="vote('Divine Ernest ideba', 'Sportsman Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Benjamin Nkaiso (Benjow)</p>
-                    <button onclick="vote('Benjamin Nkaiso (Benjow)', 'Sportsman Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Ogar Franklin</p>
-                    <button onclick="vote('Ogar Franklin', 'Sportsman Of The Year')">Vote</button>
-                </div>
-            </section>
+        <section class="category">
+            <h3>Sportsman Of The Year</h3>
+            <div class="contestant">
+                <p>Divine Ernest ideba</p>
+                <button onclick="vote('Divine Ernest ideba', 'Sportsman Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Benjamin Nkaiso (Benjow)</p>
+                <button onclick="vote('Benjamin Nkaiso (Benjow)', 'Sportsman Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Ogar Franklin</p>
+                <button onclick="vote('Ogar Franklin', 'Sportsman Of The Year')">Vote</button>
+            </div>
+        </section>
 
-            <section class="category">
-                <h3>Sportswoman Of The Year</h3>
-                <div class="contestant">
-                    <p>Oham Rhoda Oham</p>
-                    <button onclick="vote('Oham Rhoda Oham', 'Sportswoman Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Obim Calista Eyare-Osowo</p>
-                    <button onclick="vote('Obim Calista Eyare-Osowo', 'Sportswoman Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Salome Akpan</p>
-                    <button onclick="vote('Salome Akpan', 'Sportswoman Of The Year')">Vote</button>
-                </div>
-                <div class="contestant">
-                    <p>Mirabel</p>
-                    <button onclick="vote('Mirable', 'Sportswoman Of The Year')">Vote</button>
-                </div>
-            </section>
+        <section class="category">
+            <h3>Sportswoman Of The Year</h3>
+            <div class="contestant">
+                <p>Oham Rhoda Oham</p>
+                <button onclick="vote('Oham Rhoda Oham', 'Sportswoman Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Obim Calista Eyare-Osowo</p>
+                <button onclick="vote('Obim Calista Eyare-Osowo', 'Sportswoman Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Salome Akpan</p>
+                <button onclick="vote('Salome Akpan', 'Sportswoman Of The Year')">Vote</button>
+            </div>
+            <div class="contestant">
+                <p>Mirabel</p>
+                <button onclick="vote('Mirable', 'Sportswoman Of The Year')">Vote</button>
+            </div>
+        </section>
 
-            <section class="category">
-                <h3>Writer Of The Year</h3>
-                <div class="contestant">
-                    <p>PD Victor</p>
-                    <button onclick="vote('PD Victor', 'Writer Of The Year')">Vote</button>
-                </div>
-            </section>
-
-
+        <section class="category">
+            <h3>Writer Of The Year</h3>
+            <div class="contestant">
+                <p>PD Victor</p>
+                <button onclick="vote('PD Victor', 'Writer Of The Year')">Vote</button>
+            </div>
+        </section>
 
 
-            <!-- Submit Button -->
-            <button class="submit-button" onclick="submitVotes()">Submit</button>
 
-            <footer
-                style="background-color: #333; color: white; text-align: center; padding: 10px 0; position: relative; width: 100%; margin-top: 20px;">
-                <p style="margin: 0;">&copy; ELSA Awards Night, 2024. All rights reserved.</p>
-            </footer>
+
+        <!-- Submit Button -->
+        <button class="submit-button" onclick="submitVotes()">Submit</button>
+
+        <footer
+            style="background-color: #333; color: white; text-align: center; padding: 10px 0; position: relative; width: 100%; margin-top: 20px;">
+            <p style="margin: 0;">&copy; ELSA Awards Night, 2024. All rights reserved.</p>
+        </footer>
 
     </main>
 
